## Process this file with automake to produce Makefile.in

EXTRA_DIST = connect.xml iperf.xml ldap.xml oltpnet.xml oraclerac.xml
EXTRA_DIST += sctp.xml netperf.xml specweb.xml ssl.xml telnet.xml
EXTRA_DIST += two-hosts.xml

data_DATA = connect.xml iperf.xml ldap.xml netperf.xml oltpnet.xml
data_DATA += oraclerac.xml sctp.xml specweb.xml ssl.xml
data_DATA += telnet.xml two-hosts.xml

